# hackalgo

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  report.md  tailwind.config.mjs  vite.config.ts
.cursor/: mcp.json
api/: coach.ts  disaster-intel.ts  event-brief.ts  generate-image.ts
docs/: DEMO_WALLETS.md  INTEGRATIONS.md  PRODUCT_STATUS.md  verification-report.md
savings_vault/: README.md  savings_vault.code-workspace
savings_vault/projects/community_donation_hub/: .algokit.toml  pyproject.toml
savings_vault/projects/community_donation_hub/smart_contracts/: __main__.py
savings_vault/projects/community_donation_hub/smart_contracts/artifacts/community_donation_hub/: CommunityDonationHub.approval.puya.map  CommunityDonationHub.approval.teal  community_donation_hub_client.py
savings_vault/projects/community_donation_hub/smart_contracts/community_donation_hub/: contract.py  deploy_config.py
savings_vault/projects/disaster_vault/: .algokit.toml  pyproject.toml
savings_vault/projects/disaster_vault/smart_contracts/: __main__.py
savings_vault/projects/disaster_vault/smart_contracts/artifacts/disaster_vault/: DisasterVault.approval.puya.map  DisasterVault.approval.teal  disaster_vault_client.py
savings_vault/projects/disaster_vault/smart_contracts/disaster_vault/: contract.py  deploy_config.py
savings_vault/projects/disaster_vault/tests/: conftest.py  disaster_vault_client_test.py
scripts/: agent_service.ts  bootstrap_humanitarian.ts  deploy_community_hub.ts  deploy_disaster_vault.ts  download-landing-images.ts  (+9 more)
(+232 files in other folders)
