[tool.poetry]
name = "disaster_vault"
version = "0.1.0"
description = "AlgoVault disaster relief vault — Algorand smart contracts"
authors = ["AlgoVault"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.0.0"
python-dotenv = "^1.0.0"
algorand-python = "^3"
algorand-python-testing = "^1"

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.1.0"
black = { extras = ["d"], version = "*" }
ruff = "^0.9.4"
pytest = "*"
puyapy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]
